# OGrEE-Core

./: .env  .gitignore  Dockerfile  Dockerfile.nocompile  Dockerfile.withcompile  HowtoGrep.txt  Jenkinsfile  README.md  ReadMe.md  Readme.md  ^{}  ast.go  astbool.go  astflow.go  astnum.go  aststr.go  astutil.go  bootup.js  completer.go  config-example.toml  createdb.js  deriveStr.go  dev.dockerfile  dev.env  doc.go  docker-compose.yml  go.mod  go.sum  go.work.sum  graph.puml  inno-wininstaller.iss  lexer.go  lexer.nn.go  main.go  main.go.old  makefile  ocli.go  ogreemdb.sh  parser.go  parser_test.go  (+8 more)
CLI/: .gitignore  Dockerfile  README.md  ast.go  ast_test.go  astbool.go  astbool_test.go  astflow.go  astflow_test.go  astnum.go  astnum_test.go  aststr.go  aststr_test.go  astutil.go  astutil_test.go  cli.py  com.proto  completer.go  completer_helper.go  config.py  go.mod  go.sum  lexer.go  lexer_test.go  main.go  make.ps1  makefile  ocli.go  ocli_test.go  parser.go  parser_test.go  pyproject.toml  repl.go
CLI/commands/: commands.go
CLI/config/: config.go
CLI/controllers/: api.go  api_test.go  cd.go  cd_test.go  clock.go  commandController.go  commandController_test.go  controller.go  controllerUtils.go  controller_test.go  cp.go  cp_test.go  create.go  create_test.go  delete.go  delete_test.go  draw.go  draw_test.go  get.go  get_test.go  init.go  initController.go  interact.go  interact_test.go  layer.go  layer_test.go  layers_test.go  link.go  link_test.go  ls.go  ls_test.go  ogree3d.go  ogree3d_test.go  path.go  path_test.go  responseSchemaController.go  select.go  (+17 more)
(+968 files in other folders)
